# leaddata

./: .gitignore  Makefile  auth_helper.py  cf2-resource-manager.desktop  cf2_resource_manager.sh  cf2_resource_manager_auto.sh  config.py  fix_duplicate_captions.py  get_tiktok_token.py  interleave_patch.py  linkedinScrap.py  linkedinScraping.py  playwrightScraping.py  pyproject.toml  pyprojectGlb.toml  ramcc.sh  run_xtts_full.py  run_xtts_test.py  setup_voice_clone.sh  smoke_test.py  svaigCld.py  test_gtts.py  test_stealth.py
Refactor/: COMPLETE_FIX_SUMMARY.md  Convert.md  DataUnitRule.md  DebatVideo.md  DebatVideo3D.md  DebateKids.md  Flow-BasedRebuildPlan.md  PackagingRuideRule.md  ProjectDetails.md  README.md  Rule.md  SCHEMA_clips_SUMMARY.md  TASK_INDEX_MAP.md  TEASER_ARGUMENTS_BEFORE_AFTER.md  TEASER_ARGUMENTS_FIX.md  TeaserDEPLOYMENT_GUIDE.txt  cli.md  debate_video3d.md  debate_video_refactor.md  debug.md  flow_controller.md  goal-m.md  goal.md  main.md  merge_config.md  run_xtts_full.py  score.md  test.py  tree.md
Refactor/Crew/: Sys.md  crews.md
Refactor/Model/: en_US-matin-medium.md  en_US-playownai-medium.md
Refactor/Service/: Service.md  post.md
Refactor/Service/CloneVoices/: Code.md  Plan.md  PlanUv.md  pcf.md  testBn.md  thinking.md
Refactor/Service/CropService/: crop.md
Refactor/Service/Hologram/: OCR.Md  Plan.md  PlanFinal.md
Refactor/Service/ReDub/: Think.md
Refactor/Unit/: Channel.md  NewUnit.md  UnitPlan.md  flow_controller.md  unit_data.md  unit_packaging.md  unit_publisher.md  units.md
Refactor/Unit/ClassRoom/: Audio.md  CaMathElSchool.md  CharRoles.md  ClassRoom.md  CodeAll.md  Fund.md  Story.md  Student.md  Teacher.md  Unit-Classroom.md
Refactor/Unit/ClassRoom/Ca/: CountNum.md
Refactor/Unit/ClassRoom/Code/: HologramClipThink.md  HologramPlan.md  KidifyThink.md  Plan.md
Refactor/Unit/ClassRoom/ctutor/: Plan.md  Tink.md
Refactor/Unit/Debate/: Plan.md  Rv.md
Refactor/Unit/Dubbing/: PlanA.md  Think.md
Refactor/Unit/KidsLearn/: Unit-KidsLearn.md  solution.md  thinking.md  thinking2.md  thinking3.md  thinking4.md
Refactor/Unit/LeadData/: HotTravelBuyers.md  LeadDataCode.doc  LeadDataPlan.md  Travel.md  TravelIntentDetection.md  Unit-DataSupport.md  Unit-DataVsLeadData.md  leaddata_Real_enrich_osint.md  leaddata_enrich_osint.md  milky.md
Refactor/Unit/LeadData/Tr/: source.md
Refactor/Unit/Prodcast/: StageDesign.md  Unit-Prodcast.md  asset.md
Refactor/Unit/Prodcast/scripts/: create_debate_shorts_symlinks.py
assets/classroom/clips/00_intro/: Intro.mkv
assets/classroom/clips/04_S1/: S1.mkv
assets/classroom/clips/06_S3/: S3F.mkv
assets/classroom/clips/07_S4/: S4F.mkv
assets/classroom/clips/08_S5/: S5F.mkv
assets/classroom/clips/11_S8/: S8.mkv
assets/classroom/clips/16_ad2/: Bji1_s.mkv  try_s.mkv
assets/debate/00_intro/: int2s.mkv  int5s.mkv
assets/debate/01_ad1/: Bji4s.mkv
assets/debate/02_p0/: p03s.mkv
assets/debate/03_c0/: c0efl5s.mkv
assets/debate/04_p1/: Arg1.mkv
assets/debate/05_c1/: CA1.mkv
assets/debate/06_p2/: Arg2.mkv
assets/debate/07_c2/: CA2.mkv  adufl3s.mkv
assets/debate/08_p3/: Arg3.mkv  arg3h.mkv
assets/debate/09_c3/: CA3.mkv
assets/debate/10_p4/: arg4.mkv  arg4h.mkv
assets/debate/11_c4/: CA4.mkv
assets/debate/14_sum/: aly.mkv  jMfl.mkv  sum.mkv
assets/debate/15_aly/: ds.mkv  jFfl.mkv
assets/debate/18_sbs/: sub2s.mkv  sub2s_s.mkv
data/: label_mappings.json  lang.json  scraping_url.json  topic_archive.json  topic_memory.json  weak_words.json
data/scraping/url/: au.json  bd.json  ca.json  cn.json  eu.json  in.json  ir.json  my.json  ru.json  us.json
input/: README.md  clips3d.json  data.json  data3d.json  dataBn.json  lead_stats.json  llm_conf.json  score3d.json  tts_conf.json  unit.json  unit_deps.json  workspace.json
input/audience/: cat.json
input/clips/: @podcast_pcf.json  croom.json  podcast_pcf.json  podcast_pcm.json
input/profile/: croom.json  ctutor.json  debate.json  dub.json  dubTTS.json  kidifycode.json  leadint.json  leads.json  pcf.json  pcm.json
input/schemas/: ctutor_schema.json  ctutor_schema_updated.json  data.schema.json  data_schema_leaddata_patch.json  dub_schemas.json  leadint.schema.json  unit_classroom_config.schema.json
input/unit/: animation_config.json  classroom_config.json  debate_config.json  dubbing_config.json  leaddata_config.json  podcast_config.json  scout_config.json
src/cf2/: flow_controller.py  main.py  meta.py
src/cf2/cli/: __init__.py  cli.py  help.py  launcher.py  live_runner.py
src/cf2/core/: __init__.py  clip_resolver.py  clip_resolver.py.bak  config_loader.py  dependency_resolver.py  executor.py  llm_circuit.py  llm_executor.py  llm_resolver.py  logging_setup.py  paths.py  progress_tracker.py  registry.py  topic_resolver.py  utils.py  weak_words.py
src/cf2/crews/: crew.py  crew.py.bak
src/cf2/tools/: __init__.py  advertise_social_share.py  animation_audio.py  animation_bar_merge.py  animation_bar_race_audio.py  animation_bar_race_video.py  animation_intro_clip.py  animation_merge.py  animation_smart_video.py  classroom_audio_builder.py  classroom_pipeline.py  classroom_roles_generator.py  classroom_script_generator.py  classroom_script_parser.py  classroom_subtitle_builder.py  classroom_video_renderer.py  custom.py  data_csv.py  data_definition.py  data_skip_utils.py  debate_clip_resolver.txt  debate_definition.py  debate_dynamic_scoreboard.py  debate_intro_clip.py  debate_merge.py  debate_pipeline.py  debate_score_extractor.py  debate_score_renderer.py  debate_scoreboard_enhancer.py  debate_subtitle_overlay.py  debate_timeline_builder.py  debate_topic_overlay.py  debate_video.py  debate_video3d.py  debate_video_renderer.py  definition_video.py  dub_crop.py  dub_hologram.py  dub_merge_context.py  dub_mux.py  (+29 more)
src/cf2/units/: unit_advertise.py  unit_animation.py  unit_classroom.py  unit_comparison.py  unit_data.py  unit_debate.py  unit_definition.py  unit_dubbing.py  unit_leaddata.py  unit_packaging.py  unit_prodcast.py  unit_publisher.py  unit_scout.py
src/cf2/utils/: leaddata_geo_resolver.py
(+43 files in other folders)
