[project]
name = "cf2"
version = "0.1.0"
description = "CF2 — CrewAI Video Factory (Flow-Based)"
authors = [{ name = "Matin", email = "matinict@gmail.com" }]
requires-python = ">=3.11,<3.12"

dependencies = [
  # ── CrewAI ──────────────────────────────────────────────────────────────
  "crewai[tools,anthropic,google-genai]==1.14.5",

  # ── Data & Visualization ───────────────────────────────────────────────
  "pandas>=2.0.0,<3.0.0",
  "matplotlib>=3.7.0",
  "bar_chart_race>=0.1.0",
  "numpy>=1.24,<2",

  # ── Media (ffmpeg, image, OCR) ────────────────────────────────────────
  "static-ffmpeg>=3.0",
  "opencv-python>=4.8.0,<4.9",
  "pillow>=12.2.0",
  "easyocr>=1.7.2",
  "pytesseract>=0.3.13",
  "paddleocr>=2.7.3",
  "paddlepaddle>=3.0.0",

  # ── TTS ───────────────────────────────────────────────────────────────
  "gtts>=2.5.4",
  "edge-tts>=7.2.7",
  "piper-tts>=1.4.1",

  # ── Speech (Whisper) ──────────────────────────────────────────────────
  "openai-whisper>=20250625",

  # ── LLM / AI ──────────────────────────────────────────────────────────
  "litellm>=1.75.3",
  "dashscope>=1.25.13",
  "huggingface-hub>=0.36.2",
  "transformers>=4.44.0,<5",
  "langchain-core==0.3.37",

  # ── XTTS (Coqui voice clone) ─────────────────────────────────────────
  "coqui-tts[codec]>=0.27.5",

  # ── PyTorch — CPU ONLY (Ryzen 4500U has no CUDA, no ROCm) ────────────
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
  "torchvision>=0.17.0",

  # ── Google (YouTube/Publisher) ────────────────────────────────────────
  "google-api-python-client>=2.192.0",
  "google-auth>=2.48.0",
  "google-auth-oauthlib>=1.3.0",
  "google-auth-httplib2>=0.3.0",

  # ── Social / Upload ──────────────────────────────────────────────────
  "tiktok-uploader>=1.2.0",
  "selenium>=4.41.0",
  "playwright-stealth>=2.0.2",
  "llama-api-client>=0.6.0",

  # ── HTTP / Env ────────────────────────────────────────────────────────
  "requests>=2.32.5",
  "httpx>=0.28.1",
  "python-dotenv>=1.1.1",

  # ── UI ────────────────────────────────────────────────────────────────
  "rich>=14.3.4",
]

 

# ═══════════════════════════════════════════════════════════════════════════
# 🔒 GPU WALL — Zero GPU packages can install on this machine.
#
# How it works: version ">=0; python_version < '0'" is mathematically
# impossible to satisfy. uv silently skips these packages even when
# a dependency requests them. Zero runtime overhead.
#
# Your HP ZHAN 66 Pro G3 has:
#   - NO NVIDIA GPU  (no CUDA possible)
#   - AMD Vega 6 integrated (no ROCm support — Renoir is unsupported)
#   - CPU-only is the only valid path
#
# Total blocked: ~12GB of GPU binaries that would waste disk,
# waste RAM at import, and crash on this machine.
# ═══════════════════════════════════════════════════════════════════════════

override-dependencies = [
  "langchain-core==0.3.37",

  # ── Triton (PyTorch 2.x CUDA compiler — ~200MB) ────────────────────
  "triton>=0; python_version < '0'",

  # ── NVIDIA CUDA 12 runtime stack (~5GB total) ────────────────────────
  "nvidia-cublas-cu12>=0; python_version < '0'",
  "nvidia-cuda-nvrtc-cu12>=0; python_version < '0'",
  "nvidia-cuda-runtime-cu12>=0; python_version < '0'",
  "nvidia-cudnn-cu12>=0; python_version < '0'",
  "nvidia-cufft-cu12>=0; python_version < '0'",
  "nvidia-curand-cu12>=0; python_version < '0'",
  "nvidia-cusolver-cu12>=0; python_version < '0'",
  "nvidia-cusparse-cu12>=0; python_version < '0'",
  "nvidia-nccl-cu12>=0; python_version < '0'",
  "nvidia-nvtx-cu12>=0; python_version < '0'",
  "nvidia-nvjitlink-cu12>=0; python_version < '0'",

  # ── NVIDIA CUDA 11 runtime stack (older deps may request) ───────────
  "nvidia-cublas-cu11>=0; python_version < '0'",
  "nvidia-cuda-nvrtc-cu11>=0; python_version < '0'",
  "nvidia-cuda-runtime-cu11>=0; python_version < '0'",
  "nvidia-cudnn-cu11>=0; python_version < '0'",
  "nvidia-cufft-cu11>=0; python_version < '0'",
  "nvidia-curand-cu11>=0; python_version < '0'",
  "nvidia-cusolver-cu11>=0; python_version < '0'",
  "nvidia-cusparse-cu11>=0; python_version < '0'",
  "nvidia-nccl-cu11>=0; python_version < '0'",
  "nvidia-nvtx-cu11>=0; python_version < '0'",

  # ── GPU framework alternatives (CPU versions used instead) ──────────
  "paddlepaddle-gpu>=0; python_version < '0'",       # ~2GB vs 150MB CPU
  "onnxruntime-gpu>=0; python_version < '0'",        # ~300MB vs 50MB CPU
  "cupy-cuda12x>=0; python_version < '0'",           # ~2GB CUDA numpy
  "cupy-cuda11x>=0; python_version < '0'",           # ~2GB CUDA numpy

  # ── CUDA kernel packages (transformers/peft may request) ────────────
  "bitsandbytes>=0; python_version < '0'",           # CUDA quantization
  "xformers>=0; python_version < '0'",               # CUDA attention
  "flash-attn>=0; python_version < '0'",             # CUDA attention (compiles!)
  "deepspeed>=0; python_version < '0'",              # CUDA distributed
  "torchao>=0; python_version < '0'",                # CUDA torch optim
  "apex>=0; python_version < '0'",                   # NVIDIA apex

  # ── 3D sparse CUDA ops (PaddleOCR edge case) ────────────────────────
  "spconv-cu11>=0; python_version < '0'",
  "spconv-cu12>=0; python_version < '0'",

  # ── AMD ROCm (not compatible with Renoir/Vega 6 integrated) ──────────
  "torch-rocm>=0; python_version < '0'",             # AMD ROCm torch
  "pytorch-rocm>=0; python_version < '0'",           # AMD ROCm torch (alt)
  "rocblas>=0; python_version < '0'",                # AMD BLAS for ROCm
  "hipblas>=0; python_version < '0'",                # AMD HIP BLAS
  "rccl>=0; python_version < '0'",                   # AMD ROCm communication
  "ckflashattention>=0; python_version < '0'",        # AMD flash attention
  "triton-rocm>=0; python_version < '0'",            # AMD Triton compiler
]

[project.scripts]
kickoff = "cf2.main:kickoff"
plot = "cf2.main:plot"

# ═══════════════════════════════════════════════════════════════════════════
# 🔒 PyTorch CPU Index — Forces ALL torch packages from CPU-only wheels.
#
# Without this, uv might grab a CUDA wheel (~2.5GB) even on a machine
# with no NVIDIA GPU, because torch's default index serves CUDA first.
#
# The CPU index serves wheels with NO CUDA dependency:
#   torch-2.x.x+cpu-cp311-cp311-linux_x86_64.whl  (~200MB)
# vs CUDA:
#   torch-2.x.x+cu121-cp311-cp311-linux_x86_64.whl (~2.5GB)
#
# Savings per sync: ~2.3GB for torch alone, ~3GB total with torchvision
# ═══════════════════════════════════════════════════════════════════════════

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
